feat(Artifact builder): Extract Builder and Core in a module (#41)
The goal is to separate builder and UI-designer web app to prepare some coming improvement 

* Create an artifact builder module
* Separate UI designer web app and builder code
* make this module instantiating as standalone and spring
* Refactor some services and adapt test

Covers [UID-402](https://bonitasoft.atlassian.net/browse/UID-402)